--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,13 +1,13 @@
 # Change to true for Disqus comments
 disqus:
   comments: false
-  disqus_shortname: 'https-benspring-github-io-lagrange'
+  disqus_shortname: 'tryhackme'
 
-google-ID: 'UA-112060364-1'
+google-ID: 'UA-129682338-1'
 
 menu:
+- {name: 'Home', path: '..', url: ''}
 - {name: 'About', path: 'menu', url: 'about.html'}
-- {name: 'Writing', path: 'menu', url: 'writing.html'}
 - {name: 'Contact', path: 'menu', url: 'contact.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
