--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 # Change to true for Disqus comments
 disqus:
-  comments: false
+  comments: true
   disqus_shortname: 'tryhackme'
 
 google-ID: 'UA-129682338-1'
